--- a/MyBlog/src/main/resources/static/assets/css/board/detail.css
+++ b/MyBlog/src/main/resources/static/assets/css/board/detail.css
@@ -63,17 +63,18 @@ header {
 header .logo {
 	position: absolute;
 	bottom: 0;
+	left: 150px;
 	
-	margin-left: 150px;
+	cursor: pointer;
 }
 
 header .myPage {
 	position: absolute;
 	width: 30px;
 	bottom: 0;
-	right: 0;
+	right: 150;
 	
-	margin-right: 150px;
+	cursor: pointer;
 }
 
 /* main */
