--- a/MyBlog/src/main/resources/static/assets/css/signUp.css
+++ b/MyBlog/src/main/resources/static/assets/css/signUp.css
@@ -24,7 +24,7 @@ header {
 header .logo {
 	position: absolute;
 	bottom: 0;
-	left: 150px;
+	left: 100px;
 	
 	cursor: pointer;
 }
@@ -32,7 +32,7 @@ header .logo {
 header .lock {
 	position: absolute;
 	bottom: 0;
-	right: 150;
+	right: 100;
 	
 	color: #fff;
 	font-size: 18px;
@@ -210,6 +210,7 @@ header .lock {
 	
 	padding: 6px 8px;
 	
+	outline: none;
 	background: #033434;
 	color: #fff;
 	
@@ -287,6 +288,7 @@ input[id="privacyPolicy"] {
 	font-size: 15px;
 }
 
+/* underBar */
 .underBar {
 	position: relative;
 	width: 100%;
@@ -320,68 +322,85 @@ input[id="privacyPolicy"] {
 
 /* 모바일 화면일 경우의 스타일 */
 @media screen and (max-width: 900px) {
-	body {
-		font-family: 'Noto Sans KR', sans-serif;
-	
-		left: 0;
-		right: 0;
-		top: 0;
-		bottom: 0;
-	
-		background: #2B323F;
-	}
-	
-	/* header */
-	header {
-		width: 460px;
-		height: 100px;
-		margin: auto;
+
+	.main {
+		width: 100%;
 	}
 	
 	header .logo {
-		left: 211px;
-	} 
+		left: 50px;
+	}
 	
 	header .lock {
-		padding-right: 65px;
-		height: 20px;
+		right: 50px;
 	}
-	
-	header .categoryBar {
-		height: 18px;
-	}
-	
-	
-	/* serviceName */
-	.A {
-		height: 50px;
-	}
-	
-	.D {
-		height: 45px;
-		padding-left: 10px;
-	}
-	
-	.W {
-		height: 45px;
-	}
-	
-	/* signInfo */
-	.signInfo input {
-		padding: 5px 5px;
-		box-sizing: border-box;
-		border: none;
-		border-bottom: 2px solid #fff;
 		
-		background-color: #2B323F;
+	.signInfo {
+		position: relative;
+		width: 100%;
+	}
+	
+	.signInfo .name, .id, .pwd, .PN {
+		padding: 70px 70px 0 35px;
+	}
+	
+	.id .warning {
+		left: 135px;
+	}
+	
+	.inspectionOn .inspectionBtn {
+		left: 135px;
+	}
+	
+	.inspection {
+		margin-left: 135px;
+	}
+	
+	.certificationCon {
+		left: 135px;
+	}
+	
+	.privacyInfo {
+		right: 40px;
+	}
+	
+	
+	.id #idCheck {
+		position: absolute;
+		bottom: 5px;
+		
+		right: 140px;
+	
+		outline: none;
+		padding: 6px 8px;
+		
+		font-size: 10px;;
+		
+		background-color: #033434;
 		color: #fff;
 		
-		font-size: 20px;
+		cursor: pointer;
+		transition: all 0.5s;
+		
 	}
 	
-	#ok {
-		float: none;
-		margin-top: 60px;
+	.PN .certification {
+		position: absolute;
+		right: 140px;
+		bottom: 5px;
+		
+		padding: 6px 8px;
+		
+		outline: none;
+		background: #033434;
+		color: #fff;
+		
+		font-size: 10px;
+		cursor: pointer;
+	}
+	
+	.underBar #ok {
+		right: 40px;
 	}
 }
 
