--- a/MyBlog/src/main/resources/static/assets/css/home.css
+++ b/MyBlog/src/main/resources/static/assets/css/home.css
@@ -3,6 +3,7 @@
 @import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 body {
+	position: fixed;
 	font-family: 'Noto Sans KR', sans-serif;
 	
 	left: 0;
@@ -59,6 +60,16 @@ header {
 	z-index: 3;
 }
 
+header .board {
+	position: absolute;
+	bottom: 0;
+	right: 237px;
+	
+	color: #fff;
+	font-size: 18px;
+	cursor: pointer;
+}
+
 header .logo {
 	position: absolute;
 	bottom: 0;
@@ -96,9 +107,10 @@ header .myPage {
 	width: 436px;
 	height: 400px;
 	
-	top: 475px;
-	right: 185px;
-	margin-right: 30px;
+	top: 40%;
+	right: 150px;
+	
+	margin: 0;
 	
 	z-index: 3;
 }
